--- a/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
+++ b/BarnaBabok/src/main/resources/fxml/FXMLMainMenuScene.fxml
@@ -15,7 +15,7 @@
    <children>
       <HBox prefHeight="600.0" prefWidth="1080.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="600.0" prefWidth="480.0">
+            <VBox id="1" alignment="CENTER" prefHeight="600.0" prefWidth="480.0" styleClass="leftWindow">
                <children>
                   <Button mnemonicParsing="false" onMouseClicked="#handleMakeAConfigButtonClicked" prefHeight="77.0" prefWidth="237.0" styleClass="mainMenuButton" text="Gép összeállítása" textOverrun="CLIP">
                      <padding>
@@ -40,9 +40,6 @@
                      <padding>
                         <Insets bottom="15.0" left="90.0" right="90.0" top="15.0" />
                      </padding>
-                     <font>
-                        <Font size="18.0" />
-                     </font>
                      <VBox.margin>
                         <Insets bottom="5.0" />
                      </VBox.margin>
@@ -56,20 +53,23 @@
                      </font>
                   </Button>
                </children>
+               <HBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </HBox.margin>
             </VBox>
-            <VBox prefHeight="600.0" prefWidth="600.0">
+            <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="600.0">
                <children>
-                  <ImageView fitHeight="293.0" fitWidth="481.0" pickOnBounds="true" preserveRatio="true" x="295.0">
+                  <ImageView fitHeight="285.0" fitWidth="394.0" pickOnBounds="true" preserveRatio="true" x="295.0">
                      <VBox.margin>
-                        <Insets top="80.0" />
+                        <Insets right="5.0" top="100.0" />
                      </VBox.margin>
                      <image>
                         <Image url="@assets/logo2.png" />
                      </image>
                   </ImageView>
-                  <Label alignment="CENTER" prefHeight="33.0" prefWidth="462.0" text="Göter" textFill="#f1b149" textOverrun="CLIP">
+                  <Label alignment="CENTER" prefHeight="95.0" prefWidth="403.0" text="Göter" textFill="#f1b149" textOverrun="CLIP">
                      <font>
-                        <Font size="86.0" />
+                        <Font size="70.0" />
                      </font>
                   </Label>
                </children>
@@ -80,7 +80,7 @@
          <children>
             <VBox alignment="BOTTOM_LEFT" prefHeight="410.0" prefWidth="380.0" styleClass="creditsClass">
                <children>
-                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="466.0" text="Credits">
+                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="466.0" text="Készítők">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
@@ -88,7 +88,7 @@
                         <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="to do" wrappingWidth="276.3236389160156">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="276.3236389160156">
                      <VBox.margin>
                         <Insets bottom="250.0" left="10.0" right="10.0" top="10.0" />
                      </VBox.margin>
